refactor: :memo: Update docs
