# internal/infra/webserver/handlers/product_handlers.go
@@ -20,17 +20,17 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	return &ProductHandler{db}
 }
 
-// Create Product godoc
-// @Summary Create product
+// Create       Product   godoc
+// @Summary     Create product
 // @Description Create products
-// @Tags products
-// @Accept json
-// @Produce json
-// @Param request body dto.CreateProductInput true "product request"
-// @Success 201
-// @Failure 500 {object} Error
-// @Router /products [post]
-// @Security ApiKeyAuth
+// @Tags        products
+// @Accept      json
+// @Produce     json
+// @Param       request   body     dto.CreateProductInput true "product request"
+// @Success     201
+// @Failure     500       {object} Error
+// @Router      /products [post]
+// @Security    ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -58,18 +58,18 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 }
 
 // ListProducts godoc
-// @Summary List products
+// @Summary     List products
 // @Description get all products
-// @Tags products
-// @Accept json
-// @Produce json
-// @Param page query string false "page number"
-// @Param limit query string false "limit"
-// @Success 200 {array} entity.Product
-// @Failure 404 {object} Error
-// @Failure 500 {object} Error
-// @Router /products [get]
-// @Security ApiKeyAuth
+// @Tags        products
+// @Accept      json
+// @Produce     json
+// @Param       page      query    string         false "page number"
+// @Param       limit     query    string         false "limit"
+// @Success     200       {array}  entity.Product
+// @Failure     404       {object} Error
+// @Failure     500       {object} Error
+// @Router      /products [get]
+// @Security    ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
@@ -99,17 +99,17 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 }
 
 // GetProduct godoc
-// @Summary Get a product
+// @Summary     Get a product
 // @Description Get a product
-// @Tags products
-// @Accept json
-// @Produce json
-// @Param id path string true "product ID" Format(uuid)
-// @Success 200 {object} entity.Product
-// @Failure 404 {object} Error
-// @Failure 500 {object} Error
-// @Router /products/{id} [get]
-// @Security ApiKeyAuth
+// @Tags        products
+// @Accept      json
+// @Produce     json
+// @Param 			id 						 path 		string 				 true "product ID" Format(uuid)
+// @Success 		200 					 {object} entity.Product
+// @Failure 		404 					 {object} Error
+// @Failure 		500 					 {object} Error
+// @Router 			/products/{id} [get]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -129,18 +129,18 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 }
 
 // Update Product godoc
-// @Summary Update a product
+// @Summary 		Update a product
 // @Description Update a product
-// @Tags products
-// @Accept json
-// @Produce json
-// @Param id path string true "product ID" Format(uuid)
-// @Param request body dto.CreateProductInput true "product request"
-// @Success 200
-// @Failure 404 {object} Error
-// @Failure 500 {object} Error
-// @Router /products/{id} [put]
-// @Security ApiKeyAuth
+// @Tags 				products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id 						 path 		string 								 true "product ID" Format(uuid)
+// @Param 			request 			 body 		dto.CreateProductInput true "product request"
+// @Success 		200
+// @Failure 		404 					 {object} Error
+// @Failure 		500 					 {object} Error
+// @Router 			/products/{id} [put]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request)  {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -171,18 +171,17 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request)  
 }
 
 // Delete Product godoc
-// @Summary Delete a product
+// @Summary 		Delete a product
 // @Description Delete a product
-// @Tags products
-// @Accept json
-// @Produce json
-// @Param id path string true "product ID" Format(uuid)
-// @Param request body dto.CreateProductInput true "product request"
-// @Success 200
-// @Failure 404 {object} Error
-// @Failure 500 {object} Error
-// @Router /products/{id} [delete]
-// @Security ApiKeyAuth
+// @Tags 				products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id 						 path 		string 								 true "product ID" Format(uuid)
+// @Success 		200
+// @Failure 		404 					 {object} Error
+// @Failure 		500 					 {object} Error
+// @Router 			/products/{id} [delete]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
